# dune2themaker-fossfriendly

./: CMakeLists.txt  README  cGame_draw.cpp  main.cpp
dependencies/alfont_2.0.7/: CMakeLists.txt
dependencies/almp3/: CMakeLists.txt
dependencies/almp3/src/: almp3.c
dependencies/fblend/: CMakeLists.txt
dependencies/fblend/src/: 2xstretch.c  cadd.c  csub.c  ctrans.c  fade.c  radd.c  rtrans.c
include/: allegroh.h
src/: cGame.h  cGame_draw.cpp  cGame_logic.cpp  cMentat.cpp  cMentat.h  main.cpp  regions.cpp  regions.h
src/drawers/: cMessageDrawer.cpp
src/gameobjects/projectiles/: bullet.cpp  bullet.h
src/gameobjects/units/: cUnit.h
src/include/: GameState.h  IntroState.h  definitions.h
src/managers/: cKeyboardManager.cpp
src/map/: cMap.cpp
src/utils/: cLog.cpp  cTimeManager.cpp  common.cpp  d2tm_math.cpp
